# SonarMetricsReportGenerator

./: .gitignore  .replit  README.md  automated_reports.py  config.py  main.py  metrics_updater.log.1  pyproject.toml  replit.nix  requirements.txt
.streamlit/: config.toml
components/: automated_reports.py  group_management.py  interval_settings.py  metrics_display.py  policy_display.py  project_groups.py  tag_management.py  visualizations.py
database/: connection.py  schema.py
docs/: data_policies.md  user_manual.md
services/: metric_analyzer.py  metrics_processor.py  metrics_updater.py  notification_service.py  report_generator.py  scheduler.py  sonarcloud.py
utils/: helpers.py
